@@ -1665,11 +1665,38 @@ name|values
 argument_list|()
 control|)
 block|{
+try|try
+block|{
 name|queryMaker
 operator|.
 name|resetInputs
 argument_list|()
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+name|e
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 block|}
 block|}
 comment|/**    * @return Returns the queryMaker by read task type (class)    */
