@@ -28,9 +28,13 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|search
+name|benchmark
 operator|.
-name|Query
+name|byTask
+operator|.
+name|utils
+operator|.
+name|Config
 import|;
 end_import
 
@@ -42,13 +46,9 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|benchmark
+name|search
 operator|.
-name|byTask
-operator|.
-name|utils
-operator|.
-name|Config
+name|Query
 import|;
 end_import
 
@@ -90,10 +90,18 @@ specifier|public
 name|void
 name|resetInputs
 parameter_list|()
+throws|throws
+name|Exception
 block|{
 name|qnum
 operator|=
 literal|0
+expr_stmt|;
+comment|// re-initialize since properties by round may have changed.
+name|setConfig
+argument_list|(
+name|config
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|prepareQueries
